Adicion de otro parrafo

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <div class="text-center">
             <h1 style="color: coral;"> Este es el laboratorio de Git</h1>
             <p class="text-light bg-dark">Aqui podre hacer todo lo que necesite de los comandos</p>
-
+            <p class="text-primary">Este es otro parrafo para mostrar los merge</p>
         </div>
     
     </div>
