Cambios en el contenido de los parrafos

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                GitLab
+                GitLab cabecera
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,10 +48,10 @@
       </nav>
     <div class="container" >
         
-        <div class="text-center">
+        <div class="text-center bg-dark mt-5">
             <h1 style="color: coral;"> Este es el laboratorio de Git</h1>
-            <p class="text-light bg-dark">Aqui podre hacer todo lo que necesite de los comandos</p>
-            <p class="text-primary">Este es otro parrafo para mostrar los merge</p>
+            <p class="text-light ">Aqui podre hacer todo lo que necesite de los comandos</p>
+            <p class="text-light">Este es otro parrafo para mostrar los merge</p>
         </div>
     
     </div>
